--- a/SF-fruit/style/font.css
+++ b/SF-fruit/style/font.css
@@ -1,11 +1,10 @@
-@charset "UTF-8";
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?y8lnti');
-    src:    url('fonts/icomoon.eot?y8lnti#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?y8lnti') format('truetype'),
-        url('fonts/icomoon.woff?y8lnti') format('woff'),
-        url('fonts/icomoon.svg?y8lnti#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?pekukj');
+    src:    url('fonts/icomoon.eot?pekukj#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?pekukj') format('truetype'),
+        url('fonts/icomoon.woff?pekukj') format('woff'),
+        url('fonts/icomoon.svg?pekukj#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -25,113 +24,134 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-allOrder:before {
+.icon-longTime:before {
     content: "\e900";
 }
-.icon-arrow:before {
+.icon-rightIcon:before {
     content: "\e901";
 }
-.icon-Iphone:before {
+.icon-rocket:before {
     content: "\e902";
 }
-.icon-MyOrder:before {
+.icon-unGoods:before {
     content: "\e903";
 }
-.icon-service:before {
-    content: "\e904";
-}
-.icon-MyShopCar:before {
-    content: "\e905";
-}
-.icon-Tel:before {
-    content: "\e906";
-}
-.icon-unFind .path1:before {
-    content: "\e907";
-    color: rgb(93, 94, 94);
-}
-.icon-unFind .path2:before {
-    content: "\e908";
-    margin-left: -1em;
-    color: rgb(175, 175, 175);
-}
-.icon-unFind .path3:before {
-    content: "\e909";
-    margin-left: -1em;
-    color: rgb(115, 115, 115);
-}
-.icon-unFind .path4:before {
-    content: "\e90a";
-    margin-left: -1em;
-    color: rgb(115, 115, 115);
-}
-.icon-WaitGet:before {
-    content: "\e90b";
-}
-.icon-OK:before {
-    content: "\e90c";
-}
-.icon-WaitPay:before {
-    content: "\e90d";
-}
-.icon-WaitSend:before {
-    content: "\e90e";
-}
-.icon-WX:before {
-    content: "\e90f";
-}
-.icon-longTime:before {
-    content: "\e910";
-}
-.icon-rightIcon:before {
-    content: "\e911";
-}
-.icon-rocket:before {
-    content: "\e912";
-}
-.icon-unGoods:before {
-    content: "\e913";
-}
 .icon-unOrder .path1:before {
-    content: "\e914";
+    content: "\e904";
     color: rgb(93, 93, 93);
 }
 .icon-unOrder .path2:before {
-    content: "\e915";
+    content: "\e905";
     margin-left: -1em;
     color: rgb(174, 174, 174);
 }
 .icon-unOrder .path3:before {
-    content: "\e916";
+    content: "\e906";
     margin-left: -1em;
     color: rgb(93, 94, 94);
 }
 .icon-unOrder .path4:before {
-    content: "\e917";
+    content: "\e907";
     margin-left: -1em;
     color: rgb(174, 174, 174);
 }
 .icon-unOrder .path5:before {
-    content: "\e918";
+    content: "\e908";
     margin-left: -1em;
     color: rgb(93, 94, 94);
 }
 .icon-unOrder .path6:before {
-    content: "\e919";
+    content: "\e909";
     margin-left: -1em;
     color: rgb(93, 93, 93);
 }
 .icon-unOrder .path7:before {
-    content: "\e91a";
+    content: "\e90a";
     margin-left: -1em;
     color: rgb(93, 93, 93);
 }
 .icon-unOrder .path8:before {
-    content: "\e91b";
+    content: "\e90b";
     margin-left: -1em;
     color: rgb(174, 174, 174);
 }
+.icon-allOrder:before {
+    content: "\e90c";
+}
+.icon-arrow:before {
+    content: "\e90d";
+}
+.icon-Iphone:before {
+    content: "\e90e";
+}
+.icon-MyOrder:before {
+    content: "\e90f";
+}
+.icon-MyShopCar:before {
+    content: "\e910";
+}
+.icon-OK:before {
+    content: "\e911";
+}
+.icon-putDown:before {
+    content: "\e912";
+}
+.icon-service:before {
+    content: "\e913";
+}
+.icon-Tel:before {
+    content: "\e914";
+}
+.icon-unFind .path1:before {
+    content: "\e915";
+    color: rgb(93, 94, 94);
+}
+.icon-unFind .path2:before {
+    content: "\e916";
+    margin-left: -1em;
+    color: rgb(175, 175, 175);
+}
+.icon-unFind .path3:before {
+    content: "\e917";
+    margin-left: -1em;
+    color: rgb(115, 115, 115);
+}
+.icon-unFind .path4:before {
+    content: "\e918";
+    margin-left: -1em;
+    color: rgb(115, 115, 115);
+}
+.icon-WaitGet:before {
+    content: "\e919";
+}
+.icon-WaitPay:before {
+    content: "\e91a";
+}
+.icon-WaitSend:before {
+    content: "\e91b";
+}
+.icon-WX:before {
+    content: "\e91c";
+}
 .icon-search:before {
     content: "\e036";
+}
+.icon-circle-cross:before {
+    content: "\e043";
+}
+.icon-arrow-left:before {
+    content: "\e094";
+}
+.icon-arrow-right:before {
+    content: "\e095";
+}
+.icon-arrow-up:before {
+    content: "\e096";
+}
+.icon-arrow-down:before {
+    content: "\e097";
+}
+.icon-menu:before {
+    content: "\e120";
 }
 
