--- a/SF-fruit/style/style.css
+++ b/SF-fruit/style/style.css
@@ -1,104 +1,200 @@
 ﻿@charset "UTF-8";
 
 @import"font.css";
-
-.wrap {position: relative; z-index: 1; background: #f5f5f5; }
-.contain {padding: 3rem 0 4rem 0; }
+body {}
+.wrap {}
+.contain {position: absolute; top: 5rem; bottom: 5rem; left: 0; width: 100%; background: #F5F5F5;}
+.containAll {top: 0; bottom: 0;}
+.conIScroll {position: relative;}
 /*搜索框*/
-.searchBox {margin: 0 auto; background: #ffc408; padding: 0.5rem 3%;  height: 2rem; position: fixed; z-index: 100; width: 94%; overflow: hidden;}
-.searchBox .logoBox { width: 4rem; margin-right: 4%; }
+.searchBox { background: #ff9600; padding: 1rem 3%;  position: absolute; z-index: 100; left: 0; top: 0; width: 100%; overflow: hidden; box-sizing: border-box;}
+.searchBox .logoBox { width: 6rem; margin-right: 4%; }
 .searchBox .logoBox img {display: block;}
 .searchBox .searchHref {background: #fff; }
 .searchHref a {display: block; width: 100%; height: 100%; text-align: center;}
 .searchHref em {font-size: 1.6rem;}
-.searchHref span {text-align: center; display: inline-block; height: 2rem; line-height: 2rem; vertical-align: middle; }
+.searchHref span {text-align: center; display: inline-block; vertical-align: middle; line-height: 3rem}
 
-.searchArea { }
-.searchArea em { display: block; text-align: center; background: #fff; color:#888888;}
-.searchArea input[type=text] {display: block; padding: 0 4px;  height: 2rem;  line-height: 2rem; }
-.searchArea span {display: block; line-height: 2rem; height: 2rem; width: 35px; padding-left:12px; color: #fff; text-align: center; font-size: 1.6rem; }
+.searchArea i {display: block; text-align: center; color: #fff; height: auto; font-size: 2.3rem;;
+-webkit-transform: rotate(-90deg);
+-ms-transform: rotate(-90deg);
+-o-transform: rotate(-90deg);
+transform: rotate(-90deg);
+}
+.searchArea em { display: block; text-align: center; background: #fff; color:#888888; height: auto; line-height: 3rem}
+.searchArea input[type=text] {display: block; padding: 0.5rem 4px; border-radius: 0;   line-height: 2rem;  }
+.searchArea span {display: block; line-height: 3rem;  width: 35px; padding-left:12px; color: #fff; text-align: center; font-size: 1.6rem; }
 
 /*头部导航*/
 .headerNav { width: 100%; margin-bottom: 1px; background: #fff; box-sizing: border-box;}
-.headerNav li {text-align: center; line-height: 2.5rem; text-align: center;}
+.headerNav li {text-align: center; line-height:4rem; text-align: center;}
 .headerNav li a {display: block; width: 100%; }
-.headerNav li.active a {color: #ffc408; border-bottom: 2px solid #ffc408}
+.headerNav li.active a {color: #ff9600; border-bottom: 2px solid #ff9600}
+
+/* 二级导航 */
+.navSecList {overflow: hidden; }
+.navSecList ul { height: 4rem; overflow: hidden;}
+.navSecList li {width: 8rem; line-height: 3rem;}
+.navSecList li span {background: #fff; width: 96%; margin: 0.4rem auto; color: #888888;}
+.navSecList li span.active {border:1px solid #76ac25; color: #ff9600}
 
 /*底部导航*/
-.footer {position: fixed; z-index: 100; bottom: 0; width: 100%; height: 4rem; background: #ffffff;}
-.footer li {text-align: center; line-height: 4rem; position: relative;}
+.footer {position: absolute; z-index: 100; bottom: 0; left: 0; width: 100%; box-sizing: border-box;  background: #ffffff;}
+.footer li {text-align: center; line-height: 5rem; position: relative;}
 .footer li a {display: block; height: 100%;}
-.footer li em {font-size: 2.6rem; color: #000; margin-right: 1rem; position: relative; }
+.footer li em {font-size: 2.6rem; color: #252525; margin-right: 1rem; position: relative; }
 .footer li span {text-align: center; display: inline-block; height: 2rem; line-height: 2rem; vertical-align: middle; font-size: 1.8rem;}
 .footer li i {position: absolute; display: block;}
-.splitline {height: 2rem; width: 1px; background: #f3f3f3; right: -1px; top: 50%; margin-top: -1rem; }
-.userNum {right: -12px; top: -10px; height: 1.8rem; width: 1.8rem; background: #f00; border-radius: 50%; color: #fff; font-size: 1.4rem; line-height: 2rem; white-space:nowrap;text-overflow:ellipsis; overflow: hidden; text-align: center; font-weight: bold; font-family: 'SimHei'; }
+
 
 /* 搜索记录 */
-.IndexSearch { padding:3rem 0 4rem; }
+.IndexSearch { }
 .IndexSearch h2 {line-height: 5rem; border-bottom: 1px solid #f4f4f4; height: 4rem; font-weight: 100; font-size: 1.8rem}
 
 /* 热门 */
 .HotSearch {background: #fff; padding:0 1rem;}
 .hotList {padding: 0.8rem 0 1.6rem; min-height: 10.5rem; }
-.hotList li {width: 30%; float: left; text-align: center; margin: 0.4rem; line-height: 2.5rem; overflow: hidden; }
-.hotList li span {display: block; height: 100%; width: 80%; margin: 0 auto; box-sizing: border-box;  border: 1px solid #f5f5f5; white-space:nowrap;text-overflow:ellipsis; overflow: hidden;}
+.hotList li {width: 30%; margin: 0.4rem;}
 .hotList li span.active {border: 1px solid #d1e3b6}
 
 /* 历史记录 */
 .HistorySearch {background: #fff; padding:0 1rem 1rem 1rem; margin-top: 1rem; min-height: 36rem;}
-.historyList li {width: 100%; color: #9f9f9f; line-height: 4.5rem; height: 3.5rem; box-sizing: border-box; border-bottom: 1px solid #f5f5f5; }
+.historyList li {width: 100%; color: #9f9f9f; line-height: 5.5rem; height: 4.5rem; box-sizing: border-box; border-bottom: 1px solid #dfdfdf; }
 
 .HClearBtn { position: fixed; left: 0; bottom:0; padding-bottom: 0.8rem; width: 100%; background: #fff;}
-.HClearBtn button {border-radius: 6px; border: 1px solid #000; background: #fff; color: #000; line-height: 3rem; font-size: 1.8rem; font-weight: 100; display: block; margin: 0 auto; width: 94%;}
+.HClearBtn button {border-radius: 6px; border: 1px solid #252525; background: #fff; color: #252525; line-height:4rem; font-size: 1.8rem; font-weight: 100; display: block; margin: 0 auto; width: 94%;}
 
 /* 产品显示 */
 .goodsShow {}
 .goodsTitle {}
-.goodsTitle h3 {font-weight: 100; text-align: center; line-height: 3rem; }
-.goodsTitle h3 em {width: 2.5rem; height: 1px; background: #fda837; display: inline-block;  vertical-align: middle;}
-.goodsTitle h3 span {color: #fda837; margin: 0 1rem;  font-size: 1.8rem; vertical-align: middle;}
+.goodsTitle h3 {font-weight: 100; text-align: center; line-height: 4rem; }
+.goodsTitle h3 em {width: 2.5rem; height: 1px; background: #ff9600; display: inline-block;  vertical-align: middle;}
+.goodsTitle h3 span {color: #ff9600; margin: 0 1rem;  font-size: 1.8rem; vertical-align: middle;}
 
 /* 活动图片 */
 /* adImgBox  ipad  需要调试 图片变型 */
-.goodsTitle .adImgBox {width: 100%; height: 12.2rem; position: relative; border-top: 1px solid #f5f5f5; border-bottom: 1px solid #f5f5f5;}
+.goodsTitle .adImgBox {width: 100%; /*height: 12.2rem;*/ position: relative; border-top: 1px solid #dfdfdf; border-bottom: 1px solid #dfdfdf;}
 .adImgBox a{display: block; height: 100%;}
 .adImgBox img {width: 100%; height: 100%; display: block;}
 .adImgBox i {display: block; background: url(../image/tip_djjx.png); height: 5rem; width: 5rem; bottom: 0; right: 0; position: absolute; background-size: 100% 100%;}
 
 /* 产品列表 */
 .goodsList {background: #fff}
-.picList {box-sizing: border-box; float: left; width: 50%; padding:1px; overflow: hidden; position: relative; border-right: 1px solid #f5f5f5; border-bottom: 1px solid #f5f5f5;  }
-.picList:nth-child(2n) {border-right:0;}
+.picList {box-sizing: border-box; float: left; width: 50%; padding:1px; overflow: hidden; position: relative; border-width: 1px; border-style: solid; border-color: transparent; border-right-color: #dfdfdf;  border-bottom-color:#dfdfdf;;  }
+.picList:nth-child(2n) {border-right-color:transparent;}
 .picList a {height: 100%; display: block;}
-.picList figure {max-height: 20rem; max-width: 20rem; box-sizing: border-box; padding: 2.4rem 0 1.5rem; margin: 0 auto; overflow: hidden;}
-.picList img {display: block; width: 100%; height: 100%;   }
-.picList .priceArea {padding:1rem 1.6rem; font-size: 1.6rem}
-.priceArea h4 {font-size: 1.9rem; color: #000; line-height: 36px; font-weight: 100; white-space:nowrap;text-overflow:ellipsis; overflow: hidden;}
-.priceArea p {color: #fb7171; font-size: 2rem;}
+.picList figure {/*max-height: 20rem; max-width: 20rem;*/ box-sizing: border-box; /*padding: 2.4rem 0 1.5rem;*/ background:url(../image/loadImg.png) no-repeat center center; background-size:contain;  margin: 0 auto; overflow: hidden;}
+.picList img {display: block; width: 100%; height: 100%; }
+.picList .priceArea {padding:1rem 0.8rem; font-size: 1.6rem}
+.priceArea h4 {font-size: 1.9rem; color: #252525; line-height: 36px; font-weight: 100; white-space:nowrap;text-overflow:ellipsis; overflow: hidden;}
+.priceArea p {color: #fa4b4b; font-size: 2rem;}
 .priceArea p span {display: inline-block;}
 .priceArea p i {font-size: 1.4rem; vertical-align: top; float: left;}
-.priceArea p span {float: left; margin-left: 4px;}
-.priceArea .goodsWeight {color: #b0b0b0; font-size: 1.4rem; line-height: 22px; }
+.priceArea p span {float: left; margin-left: 2px;}
+.priceArea .goodsWeight {color: #b0b0b0; font-size: 1.4rem; padding-top: 6px; }
 
 /* 快捷加入购物车 */
-.addCar {position: absolute; z-index: 20; bottom: 1.4rem; right: 0; font-size: 2.4rem; margin-top: -0.6rem; color: #000; font-weight: bold;   height:2.5rem; width: 6rem; text-align: center; line-height: 3rem; }
+.addCar {position: absolute; z-index: 20; bottom: 1.4rem; right: 0; font-size: 2.4rem; margin-top: -0.6rem; color: #252525; font-weight: bold;   height:2.5rem; width: 6rem; text-align: center; line-height: 3rem; }
 .addCar em {position: relative; font-weight: 600;}
-.addCar em i {position: absolute; right: -8px; top: -4px; height: 1.2rem; width: 1.2rem; background: #ffa320; border-radius: 50%; color: #fff; font-size: 2rem; text-align: center; line-height: 13px; font-weight: 100;}
+.addCar em i {position: absolute; right: -8px; top: -4px; height: 1.2rem; width: 1.2rem; background: #ffa320; border-radius: 50%; color: #fff; font-size: 1.4rem; text-align: center; line-height: 0.75rem; font-weight: 100;}
 
 
+/* 详情页面 */
+.detailsBox {position: absolute; left: 0; top: 0; bottom: 5rem; width: 100%; overflow: hidden;  }
+.detailsInfo {position: relative;}
+/* 详情页面1 */
+.goodsInfo {text-align: center; padding-top:2rem; margin: 0 auto; background: #fff;}
+.goodsInfo h2 {font-size: 2rem; color: #252525; line-height: 2rem; font-weight: 100;}
+.goodsInfo .sideInfo {font-size: 1.6rem; color: #ff9600; line-height: 2rem; margin-top: 1rem;}
+.goodsInfo .sendWay {line-height: 3rem; color: #888888; position: relative;}
+.goodsInfo .sendWay i {right: 50%; height: 1.5rem; margin-top: -0.75rem;}
+.priceBox {color: #fa4b4b; font-size: 3rem; line-height: 4rem; border-bottom: 1px solid #dfdfdf;}
+
+/* 服务专线 */
+.serviceInfo {margin-top: 1rem; background: #fffff4; padding:1.6rem; color: #888888;}
+.serviceInfo h3 {font-weight: 100; font-size: 1.8rem; line-height: 2rem;}
+.serviceInfo p {line-height: 3rem; margin: 0.8rem 0;}
+.serviceInfo p a {font-size: 1.6rem;-}
+.serviceInfo p a em {margin-right: 1rem; color: #ff9600; }
+.serviceInfo p .btnA {padding: 0.1rem 1.5rem; color: #fff; background: #ff9600; box-sizing: border-box; border-radius: 8px;}
+.serviceBot {background: #fff; padding:1rem ; border-top: 1px solid #dfdfdf;}
+.serviceBot a {display: block; color:#ff9600; font-size: 1.6rem; line-height: 3rem; margin-bottom: 1rem;}
+.serviceBot a.btnA { border:1px solid #ff9600; border-radius: 8px; text-align: center; width: 75%;}
+.serviceBot span {display: block; color: #888888; font-size: 1.4rem; line-height: 1.4rem;}
+
+/* 详情页面2 */
+.detailImg {padding:0 1.5rem; background: #fff; box-sizing: border-box;}
+.detailImg h3 {border-bottom: 1px solid #dfdfdf; font-size: 1.8rem; font-weight: 100; color: #888888; line-height: 3rem;}
+/* 上下拉提示 */
+.pullTip {position: absolute; left: 0; width: 100%; text-align: center; z-index: -1; opacity: 0.7}
+.pullTip span {vertical-align: middle; line-height: 2rem; }
+.pullTip em {transition: all 0.5s ease 0s;
+    -webkit-transition:all 0.5s ease 0s;
+    -o-transition:all 0.5s ease 0s;
+}
+.pullTip-top {top:-3rem;}
+.pullTip-bottom {bottom:-3rem;}
+.pullTip .changIcon{transform: rotate(-180deg);}
+
+/* 详情底部操作 */
+.detailsBot {background: #fff; box-sizing: border-box; }
+.detailsBot .icoStyle {display: block;}
+.detailsBot li{/*border-top: 1px solid #dfdfdf;*/}
+.detailsBot li em {text-align: center; width: auto; margin-right: 0; line-height: 3.6rem;}
+.detailsBot li span {font-size: 1.4rem; line-height: 3rem; height: auto; display: block;}
+.detailsBot .userNum {right: 1rem; top: 0.2rem;}
+.detailsBot .deButton {width: 30%;}
+.detailsBot .deButton a {color: #fff; font-size: 1.6rem; }
+.deAddCar {background: #ff9600; }
+.deBuyOnce {background: #fa4b4b; }
 
 
 /* 轮播图 */
 /* silderBox  ipad 需要调试 图片变型 */
-.silderBox {width: 100%; height: 14.7rem; margin-top: -1px;}
+.silderBox {width: 100%;margin-top: 1px;  min-height: 12rem;}
 .silderBox img {display: block; width: 100%; height: 100%}
 
 /* 公共样式 */
+/*图标*/
 .icoStyle {height: 2rem; width: 2rem;  display: inline-block; vertical-align: middle;  line-height: 2rem}
-.moveIcon {height: 12px; width: 12px; background: #f00; position: fixed; top: 95%; left: 74%;  z-index: 10; border-radius: 50%; color: #fff; line-height: 12px; text-align: center; font-weight: bold;}
+/*分割线*/
+.splitline {height: 2rem; width: 1px; background: #dfdfdf; right: -1px; top: 50%; margin-top: -1rem; position: absolute; }
+/*购物车数量统计*/
+.userNum {right: -12px; top: -10px; height: 1.6rem; width: 1.6rem; background: #fa4b4b; border-radius: 50%; color: #fff; font-size: 1.4rem; line-height: 1.8rem; white-space:nowrap;text-overflow:ellipsis; overflow: hidden; text-align: center; font-weight: bold; font-family: 'SimHei'; }
+/*加入购物车动画标记*/
+.moveIcon {height: 14px; width: 14px; background: #ffa320; position: fixed; top: 95%; left: 74%;  z-index: 10; border-radius: 50%; color: #fff; line-height: 14px; text-align: center; font-weight: bold; opacity: 0; }
 .moveIcon.MAnimate {
-    -webkit-transition:0.5s left linear,0.5s top ease-in,0.1s 0.5s visibility linear ;
-    -o-transition: 0.5s left linear,0.5s top ease-in,0.1s 0.5s visibility linear;
-    transition: 0.5s left linear,0.5s top ease-in,0.1s 0.5s visibility linear;
+    -webkit-transition:0.8s left linear,0.8s top ease-in, 1.5s opacity linear,0.1s 0.5s visibility linear ;
+    -o-transition: 0.8s left linear,0.8s top ease-in, 1.5s opacity linear,0.1s 0.5s visibility linear;
+    transition: 0.8s left linear,0.8s top ease-in, 1.5s opacity linear,0.1s 0.5s visibility linear;
+}
+
+/* 错误信息 */
+.errIcon {position: absolute; top: 20%; left: 50%; margin-left: -30%; width: 60%; text-align: center; font-size: 15rem; color: #888888; box-sizing: border-box; overflow: hidden;
+}
+.errText {position: absolute; bottom: 20%; left: 0; width: 100%; padding:0 4rem;  text-align: center; box-sizing: border-box;}
+
+.errText h2 {font-size: 1.8rem; line-height: 3.5rem; font-weight: 500;}
+.errText p {font-size: 1.6rem; line-height: 2.5rem}
+.errText a {display: block; border:1px solid #252525; border-radius: 4px; line-height: 3rem; background: #fff; color: #252525}
+.errText .tip {font-size: 1.4rem; color: #888888;}
+
+
+
+
+.seletLi { float: left; text-align: center;  line-height: 3.5rem; overflow: hidden;  box-sizing: border-box;  }
+.seletLi  span {display: block; height: 100%; width: 80%; margin: 0 auto; box-sizing: border-box;  border: 1px solid #f5f5f5; white-space:nowrap;text-overflow:ellipsis; overflow: hidden; padding: 0 5px;}
+
+
+/* 返回顶部 */
+.goTopIcon {height: 4rem; width: 4rem; position: fixed; z-index: 100; bottom: 8rem; right: 2rem; text-align: center; color: #fff; line-height:4rem; font-size: 1.8rem; background: rgba(0,0,0,.4);}
+
+/* 运动旋转 */
+.myRotate{
+    animation: 15s linear 0s normal none infinite rotate;
+    -webkit-animation:15s linear 0s normal none infinite rotate;
+}
+@keyframes rotate{
+    from{-webkit-transform:rotate(0deg)}
+    to{-webkit-transform:rotate(-360deg)}
 }
