--- a/SF-fruit/style/MobReset.css
+++ b/SF-fruit/style/MobReset.css
@@ -178,5 +178,18 @@ input{
     box-flex: 4;
 }
 
+.BoxCenter {
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
 
 
