--- a/SF-fruit/style/style.css
+++ b/SF-fruit/style/style.css
@@ -1,8 +1,9 @@
 ﻿@charset "UTF-8";
 
 @import"font.css";
-body {}
-.wrap {}
+html,body, .wrap {position: relative; height: 100%; max-width: 900px; margin:0 auto;}
+body {background: #F5F5F5;}
+.wrap{}
 .contain {position: absolute; top: 5rem; bottom: 5rem; left: 0; width: 100%; background: #F5F5F5;}
 .containAll {top: 0; bottom: 0;}
 .conIScroll {position: relative;}
@@ -39,7 +40,7 @@ transform: rotate(-90deg);
 .navSecList li span.active {border:1px solid #76ac25; color: #ff9600}
 
 /*底部导航*/
-.footer {position: absolute; z-index: 100; bottom: 0; left: 0; width: 100%; box-sizing: border-box;  background: #ffffff;}
+.footer {position: fixed; z-index: 100; bottom: 0; left: 0; width: 100%; box-sizing: border-box;  background: #ffffff;}
 .footer li {text-align: center; line-height: 5rem; position: relative;}
 .footer li a {display: block; height: 100%;}
 .footer li em {font-size: 2.6rem; color: #252525; margin-right: 1rem; position: relative; }
@@ -65,7 +66,7 @@ transform: rotate(-90deg);
 .HClearBtn button {border-radius: 6px; border: 1px solid #252525; background: #fff; color: #252525; line-height:4rem; font-size: 1.8rem; font-weight: 100; display: block; margin: 0 auto; width: 94%;}
 
 /* 产品显示 */
-.goodsShow {}
+.goodsShow {overflow: hidden;}
 .goodsTitle {}
 .goodsTitle h3 {font-weight: 100; text-align: center; line-height: 4rem; }
 .goodsTitle h3 em {width: 2.5rem; height: 1px; background: #ff9600; display: inline-block;  vertical-align: middle;}
@@ -95,9 +96,9 @@ transform: rotate(-90deg);
 .priceArea .goodsWeight em {color:#252525;}
 
 /* 推荐产品 */
-.recommendList {padding-bottom: 2rem;}
-.recommendList ul {overflow: hidden;}
-.recommendList li {width: 15.5rem; border-bottom-color:#dfdfdf; border-top-color:#dfdfdf; border-right-color:transparent; border-left-color:#dfdfdf; }
+.recommendList {}
+.recommendList ul {overflow: hidden; background: #fff;}
+.recommendList li {width: 15.5rem; margin-bottom: 2rem; border-bottom-color:#dfdfdf; border-top-color:#dfdfdf; border-right-color:transparent; border-left-color:#dfdfdf; }
 .recommendList .picList:nth-child(2n) {border-right-color:none;}
 .recommendList .picList:last-child {border-right-color:#dfdfdf;}
 
@@ -108,7 +109,11 @@ transform: rotate(-90deg);
 
 
 /* 详情页面 */
-.detailsBox {position: absolute; left: 0; top: 0; bottom: 5rem; width: 100%;  background: #F5F5F5; z-index: 3; }
+.detailsBox {position: absolute; left: 0; top: 0; bottom: 5rem;  width: 100%;  background: #F5F5F5; z-index: 5;
+    /*-webkit-transition: all 0.5s ease 0s;
+    -o-transition: all 0.5s ease 0s;
+    transition: all 0.5s ease 0s;*/
+}
 .detailsInfo {position: relative;}
 /* 详情页面1 */
 .goodsInfo {text-align: center; padding-top:2rem; margin: 0 auto; background: #fff;}
@@ -120,7 +125,7 @@ transform: rotate(-90deg);
 .priceBox {color: #fa4b4b; font-size: 3rem; line-height: 4rem; border-bottom: 1px solid #dfdfdf; margin:0.5rem 0;}
 
 /* 服务专线 */
-.serviceInfo {margin-top: 1rem; background: #fffff4; padding:1.6rem; color: #888888;}
+.serviceInfo {margin-top: 1rem; background: #fffff4; padding:1.6rem; color: #888888; }
 .serviceInfo h3 {font-weight: 100; font-size: 1.8rem; line-height: 2rem;}
 .serviceInfo p {line-height: 3rem; margin: 0.8rem 0; font-size: 1.8rem;}
 .serviceInfo p a {}
@@ -151,20 +156,21 @@ transform: rotate(-90deg);
 .detailImg h3 {border-bottom: 1px solid #dfdfdf; font-size: 1.8rem; font-weight: 100; color: #888888; line-height: 3rem;}
 
 /* 上下拉提示 */
-.pullTip {/*position: absolute; left: 0;*/ width: 100%; text-align: center; z-index: 3; opacity: 0.7; line-height: 2rem; background: red}
-.pullTip span {vertical-align: middle; line-height: 2rem; }
-.pullTip em {transition: all 0.3s ease 0s;
+.pullTip {/*position: absolute; left: 0;*/ width: 100%; text-align: center; z-index: -1; opacity: 0.7; line-height: 4rem;  }
+.pullTip span {vertical-align: middle; line-height: 4rem; }
+.pullTip em {
+    transition: all 0.3s ease 0s;
     -webkit-transition:all 0.3s ease 0s;
     -o-transition:all 0.3s ease 0s;
 }
-/*.pullTip-top {top:-3rem;}
-.pullTip-bottom {bottom:-3rem;}*/
+.pullTip-top {top:-40px;}
+.pullTip-bottom {bottom:0px;}
 .pullTip .changIcon{transform: rotate(-180deg);}
 
 /* 详情底部操作 */
 .detailsBot {background: #fff; box-sizing: border-box; }
 .detailsBot .icoStyle {display: block;}
-.detailsBot li{/*border-top: 1px solid #dfdfdf;*/}
+.detailsBot li{/*border-top: 1px solid #dfdfdf;*/ color: #fff}
 .detailsBot li em {text-align: center; width: auto; margin-right: 0; margin-top: 1rem;}
 .detailsBot li span {font-size: 1.4rem;   height: auto; display: block;}
 .detailsBot .userNum {right: 14px; top: -10px;}
@@ -174,11 +180,13 @@ transform: rotate(-90deg);
 .deBuyOnce {background: #fa4b4b; }
 
 /* 规格选择框 */
-.seletSide {background: #fff; position: fixed; min-height:28rem; width: 100%; z-index: 120; bottom: 0; padding: 0 1.2rem; box-sizing: border-box;}
+.seletSide {background: #fff; position: fixed; left: 0; min-height:28rem;width: 100%; z-index: 120; bottom: 0; padding: 0 1.2rem; box-sizing: border-box; }
 /* 标题统一 */
-.seletSide section {border-bottom: 1px solid #dfdfdf; padding: 1rem 0;}
+.seletSide section {border-bottom: 1px solid #dfdfdf; padding: 1.5rem 0;}
 .secName {color: #252525;}
-.seletSide .oBuyNum {border-bottom-color:transparent; padding-bottom: 3rem;}
+.seletSide .oBuyNum {border-bottom-color:transparent; padding-bottom: 3rem;   }
+.seletSide .btnTrue {display: block;}
+
 
 /* 产品小图 */
 .goodImg_small {height: 7.5rem; width: 7.5rem; border:1px solid #dfdfdf; margin-right: 2rem}
@@ -191,25 +199,85 @@ transform: rotate(-90deg);
 
 
 /* 下拉箭头 */
-.arrDownBtn {background: url(../image/arrDownIcon.png) no-repeat center; background-size: 100% 100%; width: 3rem; height: 1rem; margin: 1rem auto 0;}
+.arrDownBtn {background: url(../image/arrDownIcon.png) no-repeat center 10px; background-size: 25% 20%; width: 38%; height: 4rem;  padding-top: 0.5rem; position: absolute; left: 50%; top: 0px; margin-left: -19% }
 /* 关闭按钮 */
-.closeBtn {position: absolute; right: 0px; top: 0; z-index: 5; height: 3rem; width: 3rem; background: url(../image/closeBg.png) no-repeat center; background-size: 100% 100%;}
+.closeBtn {position: absolute; right: 5px; top: 5px; z-index: 5; height: 2rem; width: 2rem; background: url(../image/closeBg.png) no-repeat center; background-size: 100% 100%;}
 
 /* 增加减少 */
-.box-amount{display:-webkit-box;margin-right:0.5rem;background:#fff; height:4rem; width: 15rem;}
+.box-amount{display:-webkit-box; background:#fff; height:4rem; width: 15rem;}
 .box-amount a{position:relative;display:block; border:.1rem solid #dfdfdf; width:4rem; height:4rem; font-size:2.5rem; text-align:center;}
-.addBtn em,.subBtn em{font-size: 2.5rem; font-weight: 500; color: #252525; line-height: 4rem;  }
-.subBtn em{background-position:0 -1.1rem;}
-.sumNum{display:block;  width:auto; height:4rem; cursor: pointer; height:100%; text-align:center;font-size:1.6rem; outline:none; border-top:.1rem solid #dfdfdf;border-bottom:.1rem solid #dfdfdf; border-radius: 0}
+.addBtn em,.subBtn em{font-size: 2.5rem; font-weight: 500; color: #252525; line-height: 3.5rem;  }
+
+.sumNum{display:block;  width:auto;  cursor: pointer; height:100%; text-align:center;font-size:1.6rem; outline:none; border-top:.1rem solid #dfdfdf;border-bottom:.1rem solid #dfdfdf; border-radius: 0}
 /* 确定按钮 */
-.btnTrue {background: #ff9600; color: #fff; line-height: 4rem; font-size: 1.6rem; border-radius: 8px; margin-bottom: 0.5rem;}
+.btnTrue {background: #ff9600; color: #fff; line-height: 4rem; font-size: 1.6rem; border-radius: 8px; margin-bottom: 0.5rem; text-align: center;}
+
+
+/* 购物车 */
+.carListBox {background: #fff; margin-bottom: 1.5rem; padding: 0 1rem;}
+.carListHead {}
+.storeOwner {position: relative; }
+.storeOwner .storeImg {height: 4rem; width: 4rem;}
+.storeOwner .splitline {right: 0.8rem; height: 3rem; margin-top: -1.5rem;}
+.carListBox .storeEdit {font-size: 3rem; box-sizing: border-box;}
+.carListBox .storeEdit:hover {color: rgba(0,0,0,.5);}
+
+.carList li {position: relative; z-index: 1; border-top:1px solid #dfdfdf; overflow: hidden;background: #fff;
+
+}
+
+.carListArea {background: #fff; padding:1.5rem 0;
+    transition: all 0.5s ease 0s;
+    -webkit-transition:all 0.5s ease 0s;
+    -o-transition:all 0.5s ease 0s;
+    position: relative; z-index: 1;
+}
+
+.allselet li {color: #252525; font-size: 1.6rem; }
+.allselet .btnAllselet {width: 20%;}
+.btnAllselet.active .checkBox{background: #ff9600;}
+.allselet .btnAllselet em {font-size: 1.6rem; margin-right: 0; vertical-align: middle; margin-left: 0.2rem;}
+.allselet .checkBox {font-size: 1.2rem; margin-right: 0;}
+.allselet .btnPay {width: 30%;}
+.allselet .btnPay a {color: #fff; background: #ff9600; display: block; width: 100%; height: 100%;}
+.allselet .sumPriceBox em {font-size: 1.6rem; margin-right: 0; color: #fa4b4b; vertical-align: middle;}
+.allselet .sumPriceBox span {font-size: 1.6rem; color: #989898; vertical-align: middle;}
+.allselet .sumPriceBox .sumPrice {color: #fa4b4b; font-size: 2rem; vertical-align: middle;}
+
+
+.carList .box-amount {position: absolute; bottom: 1.2rem; right: 0; width: 10rem; height: 2.5rem; z-index: 5;}
+.carList .box-amount a {height: 2.5rem; width: 2.5rem;}
+.carList .box-amount a em {line-height: 2rem; display: block;}
+.carList .btnDel {background:#fa4848; color: #fff; height: 100%; width: 4rem; position: absolute; right: 0rem; top: 0; z-index: -100;  }
+.carList .btnDel span {display: block; text-align: center; }
+
 
 /* 轮播图 */
+.swiper-container {height: 100%; width: 100%;}
+.swiper-slide {height: 100%; width: 100%;}
+.swiper-slide a {display: block; height: 100%; width: 100%;}
+.swiper-lazy-preloader {opacity: 0.4}
 /* silderBox  ipad 需要调试 图片变型 */
 .silderBox {width: 100%;margin-top: 1px;  min-height: 12rem;}
 .silderBox img {display: block; width: 100%; height: 100%}
 
 /* 公共样式 */
+
+/* 横向产品 */
+.listBox {}
+.listBox .listImg {height: 7rem; width: 7rem; border:1px solid #dfdfdf; box-sizing: border-box; margin-right: 1rem;}
+.listBox .listImg img {width: 100%; height: 100%;}
+.listBox .listInfor {}
+.listBox .listInfor h4 {line-height: 30px;   font-size: 1.8rem;}
+.listBox .listInfor .goodsWeight { padding-top: 0;  }
+.listBox .listInfor .goodsWeight span {float: none; margin-left: 0; color: #252525;}
+.listBox .listInfor .goodsPrice {}
+
+
+/* 选择框 */
+.checkBox {display:block; height: 2rem; width:2rem; box-sizing: border-box; border: 1px solid #dfdfdf; border-radius: 50%; text-align: center; line-height: 2rem; color: #fff; font-size: 1.2rem; margin-right:1rem;  }
+.checkBox.active {background: #ff9600;}
+
 /*图标*/
 .icoStyle {height: 2rem; width: 2rem;  display: inline-block; vertical-align: middle;  line-height: 2rem}
 /*分割线*/
@@ -226,8 +294,6 @@ transform: rotate(-90deg);
 
 /* 阴影 */
 .shadow {position: fixed; background: rgba(0,0,0,.5) repeat;  height: 100%; width: 100%; z-index: 110;}
-
-
 
 /* 错误信息 */
 .errIcon {position: absolute; top: 20%; left: 50%; margin-left: -30%; width: 60%; text-align: center; font-size: 15rem; color: #888888; box-sizing: border-box; overflow: hidden;
@@ -260,4 +326,10 @@ transform: rotate(-90deg);
 @keyframes rotate{
     from{-webkit-transform:rotate(0deg)}
     to{-webkit-transform:rotate(-360deg)}
+}
+.TformY5 {
+    -webkit-transform: translate(-5rem);
+    -ms-transform: translate(-5rem);
+    -o-transform: translate(-5rem);
+    transform: translate(-5rem);
 }
